--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,27 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: 'Circular';
+  src: url('/fonts/CircularStd-Book.eot');
+  src: url('/fonts/CircularStd-Book.eot?#iefix') format('embedded-opentype'),
+    url('/fonts/CircularStd-Book.woff2') format('woff2'),
+    url('/fonts/CircularStd-Book.woff') format('woff'),
+    url('/fonts/CircularStd-Book.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Circular';
+  src: url('/fonts/CircularStd-Bold.eot');
+  src: url('/fonts/CircularStd-Bold.eot?#iefix') format('embedded-opentype'),
+    url('/fonts/CircularStd-Bold.woff2') format('woff2'),
+    url('/fonts/CircularStd-Bold.woff') format('woff'),
+    url('/fonts/CircularStd-Bold.ttf') format('truetype');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
